--- a/style.css
+++ b/style.css
@@ -1,18 +1,3 @@
-.portada__iconos-link i {
-  font-size: 40px;
-  color: white;
-}
-
-.portada__iconos-link i:hover {
-  color: rgb(207, 207, 207);
-}
-
-.portada {
-  margin-top: 69px;
-  background-color: lightgray;
-  width: 100%;
-  height: 300px;
-}
 
 .contenedor {
   width: 100%;
@@ -21,26 +6,53 @@
     align-items: center;
 }
 
-.carousel{
-    width: 100%;
+
+/* footer */
+.portada__iconos-link i {
+  font-size: 20px;
+  color: white;
 }
 
-.brand {
+.portada__iconos-link i:hover {
+  color: rgb(207, 207, 207);
+}
+
+/* .portada {
+  margin-top: 69px;
+  background-color: lightgray;
+  width: 100%;
+  height: 300px;
+} */
+
+.brands_container{
+  display: flex;
+  /* border: 3px  red solid; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+}
+
+
+
+.brands {
+  /* border: 3px blue solid; */
+
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 80%;
-  padding: 50PX;
+  /* padding: 50PX; */
 }
 
-.brands img {
+.brand img {
   width: 150px;
   height: 150px;
   margin: 25px;
 }
 
-.brands:hover{
+.brand:hover{
     transform: scale(1.1);
     transition: all 0.5s ease;
 }
@@ -51,13 +63,64 @@
 }
 .aboutus {
   font-size: 40px;
-  color: green;
+  color: white;
 }
 
-footer {
-  background-color: #000000;
-  color: #ffffff;
-  padding: 20px;
-  text-align: center;
-  margin-top: 30px;
+
+
+@media screen and (min-width: 1024px) {
+
+  .aboutus{
+    background: #c2c2c2 ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    width: 100%;
+  }
+
+  .aboutus_content{
+    display: flex;
+    /* border: 1px solid green; */
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 80%;
+    height: 80%;
+  }
+
+  .aboutus_item{
+    display: flex;
+    background: #8d8d8d ;
+    border-radius: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 45%;
+    height: 45%;
+ }
+
+ .aboutus_item i {
+  font-size: 85px;
+}
+
+  .contactus{
+    height: 500px;
+    width: 100%;
+  }
+
+  footer {
+    background-color: #000000;
+    color: #ffffff;
+    padding: 20px;
+    text-align: center;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+  
+}
+
+@media screen and (max-width: 767px) {
+  
 }
