--- a/style.css
+++ b/style.css
@@ -80,11 +80,12 @@
 
   .carousel-inner{
     height: 100vh;
+    width: 100vw;
   }
 
-  .banner-img{
+  /* .banner-img{
     height: 100vh;
-  }
+  } */
 
   .aboutus{
     background: #c2c2c2 ;
