--- a/style.css
+++ b/style.css
@@ -87,6 +87,48 @@
     height: 100vh;
   } */
 
+  .ourhistory{
+    background: #ead9d9 ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .ourhistory_content{
+    margin: 50px 0;
+    width: 80%;
+  }
+
+  .ourhistory_title{
+    text-align: center;
+  }
+
+  .ourhistory_container{
+    /* background-color: gre  en; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .ourhistory_logo{
+      width: 30%;
+  }
+
+  .ourhistory_logo img{
+    width: 100%;
+    height: 100%;
+  }
+
+  .ourhistory_text {
+    /* background-color: white; */
+    font-size: 18px;
+    width: 70%;
+  }
+
+
+
   .aboutus{
     background: #c2c2c2 ;
     display: flex;
