--- a/style.css
+++ b/style.css
@@ -17,16 +17,10 @@
   color: rgb(207, 207, 207);
 }
 
-/* .portada {
-  margin-top: 69px;
-  background-color: lightgray;
-  width: 100%;
-  height: 300px;
-} */
+
 
 .brands_container{
   display: flex;
-  /* border: 3px  red solid; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -36,14 +30,11 @@
 
 
 .brands {
-  /* border: 3px blue solid; */
-
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 80%;
-  /* padding: 50PX; */
 }
 
 .brand img {
@@ -57,14 +48,14 @@
     transition: all 0.5s ease;
 }
 
-.contactus {
+/* .contactus {
   font-size: 40px;
   color: red;
 }
 .aboutus {
   font-size: 40px;
   color: white;
-}
+} */
 
 
 
@@ -79,21 +70,23 @@
   }
 
   .carousel-inner{
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .banner-img{
     height: 100vh;
     width: 100vw;
   }
 
-  /* .banner-img{
-    height: 100vh;
-  } */
-
   .ourhistory{
-    background: #ead9d9 ;
+    background: #232323 ;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
+    color: #ffffff;
   }
 
   .ourhistory_content{
@@ -106,14 +99,14 @@
   }
 
   .ourhistory_container{
-    /* background-color: gre  en; */
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
   }
 
   .ourhistory_logo{
-      width: 30%;
+      width: 25%;
+
   }
 
   .ourhistory_logo img{
@@ -122,12 +115,9 @@
   }
 
   .ourhistory_text {
-    /* background-color: white; */
-    font-size: 18px;
+    font-size: 17px;
     width: 70%;
   }
-
-
 
   .aboutus{
     background: #c2c2c2 ;
@@ -140,7 +130,6 @@
 
   .aboutus_content{
     display: flex;
-    /* border: 1px solid green; */
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
@@ -162,20 +151,280 @@
   font-size: 85px;
 }
 
-  .contactus{
-    height: 500px;
-    width: 100%;
-  }
+.contactus{
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 600px;
+  width: 100%;
+}
 
-  footer {
-    background-color: #000000;
-    color: #ffffff;
-    padding: 20px;
-    text-align: center;
-    margin-top: 30px;
+.contactus h2{
+  margin: 50px 0;
+}
+
+.contactus_container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 80%;
+}
+
+.contactus_info{
+  width: 35%;
+}
+
+.card_info{
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.card_info-icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 35px;
+  margin-right: 10px;
+}
+.card_info-text{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.info_store{
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+.info_address{
+  font-size: 16px;
+  margin: 0;
+  /* font-weight: bold; */
+}
+
+.contactus_googlemaps{
+  width: 50%;
+}
+
+}
+
+footer {
+  background-color: #000000;
+  color: #ffffff;
+  padding: 20px;
+  text-align: center;
+  margin-top: 30px;
+}
+
+
+/*  */
+
+
+
+.galery {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+/*  */
+.galery_content {
+  width: 80%;
+  display: flex;
+  background: red;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.galeria-port{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.imagen-port{
+  width: 24%;
+  margin-bottom: 10px;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+}
+
+.imagen-port > img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.hover-galeria{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  transform: scale(0);
+  background: rgba(73, 72, 73, 0.7);
+  transition: transform .5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.hover-galeria img{
+  width: 50px;
+}
+
+.hover-galeria p{
+  color: #fff;
+  font-weight: bold;
+}
+
+.imagen-port:hover .hover-galeria{
+  transform: scale(1);
+}
+ /*
+.card {
+  width: 20%;
+  margin: 25px;
+  border-radius: 40px;
+}
+
+.card:hover{
+  transform: scale(1.03);
+  transition: all 0.3s ease;
+}
+
+.card-img.overlay{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-title {
+  color: #e9e9e9;
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+} */
+
+
+/*
+.card_image img{
+  width: 100%;
+}
+
+.texto_centro{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.card:hover{
+  transform: scale(1.1);
+  transition: all 0.5s ease;
+  background: rgb(0,0,0);
+background: radial-gradient(circle, rgba(0,0,0,0.18841039833902307) 15%, rgba(6,20,23,1) 114%);
+} */
+
+
+  /* 
+.card {
+  width: 20%;
+  margin: 25px;
+  border-radius: 40px;
+  box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+  cursor: pointer;
+  transition: 0.4s;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+
+  font-weight: bold;
+  font-size: 30px;
+  margin-top: 80px; 
+}
+
+.card .card_title {
+  text-align: center;
+  border-radius: 0px 0px 40px 40px;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  margin-top: 80px;
+  height: 40px;
+}
+
+.card .card_image {
+  width: 100%;
+  height: inherit;
+}
+
+.card .card_image img {
+  width: inherit;
+  height: inherit;
+  border-radius: 40px;
+  object-fit: cover;
+}
+
+.card:hover {
+  transform: scale(0.9, 0.9);
+  box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
+    -5px -5px 30px 15px rgba(0,0,0,0.22); 
+}
+
+.title-white {
+  color: white;
+}
+
+.title-black {
+  color: black;
+}
+ */
+
+ .slider {
+  width: 80%;
+  height: auto;
+  margin: auto;
+  overflow: hidden;
+}
+
+.slider .slide-track {
+  display: flex;
+  animation: scroll 40s linear infinite;
+  -webkit-animation: scroll 40s linear infinite;
+  width: calc(200px * 14);
+}
+
+.slider .slide {
+  width: 700px;
+}
+
+.slider .slide img {
+  width: 100%;
+}
+
+@keyframes scroll {
+  0% {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+  }
+  100% {
+      -webkit-transform: translateX(calc(-200px * 7));
+      transform: translateX(calc(-200px * 7));
   }
 }
 
+/*  */
 @media screen and (min-width: 767px) and (max-width: 1023px) {
   
 }
