--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,17 @@
 /* Banner portada */
 
 .portada {
-  width: 100%;
-  margin: auto;
+  background-image: url(./Assets/portada.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  height: 735px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  /* width: 100%; */
+  /* margin: auto; */
 }
 
 .portada img {
@@ -555,6 +564,20 @@ footer {
     flex-direction: column;
   }
 
+  .social_container{
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .social_link{
+    width: 100%;
+  }
+
+  .social_card_info{
+    width: 80%;
+  }
+
   iframe {
     width: 400px;
   }
@@ -562,5 +585,16 @@ footer {
   .galery_item {
     max-width: 250px;
     max-height: 250px;
+  }
+
+  .portada {
+    width: 100%;
+    height: 100vh;
+    /* position: absolute; */
+    overflow: hidden;
+  }
+
+  .portada img{
+    height: 50%;
   }
 }
