--- a/styles.css
+++ b/styles.css
@@ -44,26 +44,6 @@ section {
   margin: 50px 0;
 }
 
-.red {
-  background-color: red;
-  border: solid 2px black;
-}
-
-.blue {
-  background-color: blue;
-  border: solid 2px black;
-}
-
-.purple {
-  background-color: purple;
-  border: solid 2px black;
-}
-
-.green {
-  background-color: green;
-  border: solid 2px black;
-}
-
 .subtitle {
   font-size: 30px;
   font-weight: bold;
@@ -133,12 +113,18 @@ section {
 
 /* Contacto / Forma de llegar */
 
+.contact{
+  background-color: rgb(35, 35, 35);
+  color: white;
+}
+
 .contactus_container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
   height: 100%;
+
 }
 
 /* Card */
@@ -172,10 +158,10 @@ section {
 }
 
 /* Call us */
-.callus {
+/* .callus {
   background-color: rgb(35, 35, 35);
   color: white;
-}
+} */
 
 .callus_container {
   display: flex;
@@ -253,7 +239,6 @@ section {
 .galery_item {
   max-width: 350px;
   max-height: 350px;
-  background-color: aqua;
   text-align: center;
   margin: 20px;
 }
@@ -437,10 +422,7 @@ footer {
   .galery_item {
     max-width: 250px;
     max-height: 250px;
-    /* background-color: aqua;
-      text-align: center;
-      margin: 20px; */
-  }
+
 }
 
 @media screen and (max-width: 767px) {
@@ -579,7 +561,7 @@ footer {
   }
 
   iframe {
-    width: 400px;
+    width: 300px;
   }
 
   .galery_item {
@@ -597,4 +579,5 @@ footer {
   .portada img{
     height: 50%;
   }
+}
 }
