--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,16 @@
   box-sizing: border-box;
 }
 
+/* Carrucel */
+.total{
+  height: 100vh;
+}
+
+span{
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  font-weight: 700;
+}
 /* Banner portada */
 
 .portada {
@@ -105,6 +115,10 @@ section {
     transform: translateX(calc(-300px * 7));
   }
 }
+
+/* .ocult{
+  visibility: hidden;
+} */
 /*  */
 .history {
   background-color: rgb(35, 35, 35);
@@ -198,6 +212,29 @@ section {
   height: auto;
 }
 
+.card_info-email{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  padding: 20px;
+
+  margin: 10px 0;
+  border-radius: 10px;
+  font-weight: bold;
+  box-shadow: -9px 9px 18px -7px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: -9px 9px 18px -7px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: -9px 9px 18px -7px rgba(0, 0, 0, 0.2);
+}
+
+.card_info-email:hover{
+  background-color: #e3e3e3;
+}
+
+.card_info-email .info_store{
+  margin: 30px 0;
+}
 .social_link {
   display: flex;
   align-items: center;
@@ -217,6 +254,7 @@ section {
 
 .social_link:hover {
   background-color: #e3e3e3;
+  color: #1f1f1f;
 }
 
 /* Carrucel */
@@ -375,6 +413,11 @@ footer {
 }
 
 @media screen and (min-width: 767px) and (max-width: 1023px) {
+
+  .total{
+    margin-top: 50px;
+    height: 50vh;
+  }
   /* Banner portada */
   .brands {
     flex-direction: column;
@@ -423,9 +466,26 @@ footer {
     max-width: 250px;
     max-height: 250px;
   }
+
+  .social_container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    /* background-color: rebeccapurple; */
+  }
+  .social_card_info{
+    width: 400px;
+    /* background-color: red; */
+  }
 }
 
 @media screen and (max-width: 767px) {
+
+  .total{
+    margin-top: 50px;
+    height: 30vh;
+  }
+
   .new_product .content {
     width: 80%;
     display: flex;
@@ -541,6 +601,17 @@ footer {
     width: 100%;
   }
 
+
+
+
+  .callus_container {
+    flex-direction: column;
+  }
+
+  .callus_card_info{
+    margin: 10px 0;
+  }
+
   /* contact us */
   .contactus_container {
     flex-direction: column;
@@ -562,6 +633,7 @@ footer {
 
   iframe {
     width: 300px;
+    height: 300px;
   }
 
   .galery_item {
